--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-sass": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "gulp-webpack": "^1.5.0",
     "webpack": "^1.12.14"
   }
 }
