--- a/Frontend/bower.json
+++ b/Frontend/bower.json
@@ -14,5 +14,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.5.2",
+    "jquery": "^2.2.2",
+    "d3": "^3.5.16",
+    "angular-ui-router": "ui-router#^0.2.18",
+    "bootstrap": "^3.3.6"
+  }
 }
