--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.9",
     "webpack": "^1.12.14"
   }
 }
