--- a/WebSite/src/WebSite/wwwroot/web.config
+++ b/WebSite/src/WebSite/wwwroot/web.config
@@ -4,6 +4,18 @@
     <handlers>
       <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
     </handlers>
+		<rewrite>
+			<rules>
+				<rule name="Main Rule" stopProcessing="true">
+					<match url=".*" />
+					<conditions logicalGrouping="MatchAll">
+						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+					</conditions>
+					<action type="Rewrite" url="/" />
+				</rule>
+			</rules>
+		</rewrite>
     <httpPlatform processPath="%DNX_PATH%" arguments="%DNX_ARGS%" stdoutLogEnabled="false" startupTimeLimit="3600"/>
   </system.webServer>
 </configuration>
