Added Actions and Schedule migrations.

--- a/WebApi/src/WebApi/appsettings.json
+++ b/WebApi/src/WebApi/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-WebApi-e6461b85-7d3b-431f-846b-c06c741b1838;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+		"DefaultConnection": {
+			"ConnectionString": "Server=(localdb)\\\\mssqllocaldb;Database=aspnet5-WebApi-e6461b85-7d3b-431f-846b-c06c741b1838;Trusted_Connection=True;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\WebApiStorage.mdf;"
+		}
   },
   "Logging": {
     "IncludeScopes": false,
