Updated connections strings for Azure DB

--- a/WebApi/src/WebApi/appsettings.json
+++ b/WebApi/src/WebApi/appsettings.json
@@ -1,15 +1,15 @@
 ﻿{
   "Data": {
 		"DefaultConnection": {
-			"ConnectionString": "Server=(localdb)\\\\mssqllocaldb;Database=aspnet5-WebApi-e6461b85-7d3b-431f-846b-c06c741b1838;Trusted_Connection=True;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\WebApiStorage.mdf;"
+			"ConnectionString": "Server=tcp:epam.database.windows.net,1433;Database=hackaton-happydog-db;User ID=User@epam;Password=Pass123456;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
 		}
   },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Verbose",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Verbose",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	}
 }
