--- a/Frontend/bower.json
+++ b/Frontend/bower.json
@@ -20,6 +20,7 @@
     "jquery": "^2.2.2",
     "d3": "^3.5.16",
     "angular-ui-router": "ui-router#^0.2.18",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "parallax": "^2.1.3"
   }
 }
